# avro-rs

./: .asf.yaml  Cargo.toml  NOTICE  NOTICE.txt  README.md  RELEASE.md  WARP.md  build.sh  deny.toml  licenserc.toml  rfc.md  rustfmt.toml
avro/: Cargo.toml  README.md
avro/benches/: serde.rs  serde_json.rs  single.rs
avro/examples/: async_benchmark.rs  benchmark.rs  generate_interop_data.rs  specific_single_object.rs  test_interop_data.rs  test_interop_single_object_encoding.rs  to_value.rs
avro/src/: alloc.rs  bigdecimal.rs  bytes.rs  codec.rs  de.rs  de_schema.rs  decimal.rs  decode.rs  duration.rs  encode.rs  error.rs  headers.rs  lib.rs  rabin.rs  reader.rs  schema.rs  schema_compatibility.rs  schema_equality.rs  ser.rs  ser_direct.rs  ser_schema.rs  types.rs  util.rs  validator.rs  writer.rs
avro/src/decode/: block.rs  bytes.rs  codec.rs  commands.rs  datum.rs  error.rs  mod.rs  object_container_file.rs  union.rs
avro/src/decode2/: codec.rs  mod.rs
avro/src/decode2/complex/: block.rs  mod.rs  record.rs  union.rs
avro/src/decode2/logical/: decimal.rs  mod.rs  time.rs  uuid.rs
avro/src/decode2/object_container/: data.rs  header.rs  mod.rs
avro/src/decode2/primitive/: bytes.rs  floats.rs  mod.rs  zigzag.rs
avro/src/documentation/: avro_data_model_to_serde.rs  dynamic.rs  mod.rs  primer.rs  serde_data_model_to_avro.rs  serde_datamodel_to_avro.rs
avro/src/encode2/: block.rs  bytes.rs  codec.rs  commands.rs  datum.rs  error.rs  mod.rs  object_container_file.rs  union.rs
avro/src/reader/: asynch.rs  block.rs  datum.rs  mod.rs  single_object.rs  sync.rs
avro/src/schema/: builders.rs  mod.rs  name.rs  parser.rs  record_field.rs  resolve.rs  union.rs
avro/src/schema/record/: field.rs  mod.rs  schema.rs
avro/src/serde/: bytes.rs  de.rs  derive.rs  mod.rs  ser.rs  ser_schema.rs  serde_with.rs  util.rs  with.rs
avro/src/serde/deser_resolving/: any.rs  mod.rs  record.rs
avro/src/serde/deser_schema/: array.rs  block.rs  enums.rs  identifier.rs  map.rs  mod.rs  record.rs  tuple.rs  union.rs
avro/src/serde/ser_schema/: array.rs  block.rs  map.rs  mod.rs  tuple.rs  union.rs
avro/src/state_machines/reading/: async_impl.rs  block.rs  bytes.rs  codec.rs  commands.rs  datum.rs  error.rs  mod.rs  object.rs  object_container_file.rs  (+2 more)
avro/src/writer/: datum.rs  mod.rs  single_object.rs
avro/tests/: append_to_existing.rs  async_schema.rs  avro-3786.rs  avro-3787.rs  avro-rs-219.rs  avro-rs-226.rs  avro-rs-285-bytes_deserialization.avro  avro-rs-285-bytes_deserialization.rs  avro-rs-547.rs  avro_rs_528_nullable_union.rs  avro_schema_component.rs  codecs.rs  decompression_bomb.rs  get_record_fields.rs  io.rs  negative_block_size.rs  nullable_union.rs  schema.rs  serde_human_readable_false.rs  serde_human_readable_true.rs  shared.rs  to_from_avro_datum_schemata.rs  union_schema.rs  union_serialization.rs  validators.rs
avro_derive/: Cargo.toml  README.md  build.rs
avro_derive/src/: case.rs  fields.rs  implementation.rs  lib.rs  structs.rs  tuple.rs  utils.rs
avro_derive/src/attributes/: avro.rs  mod.rs  serde.rs
avro_derive/src/enums/: bare_union.rs  mod.rs  plain.rs  record_internally_tagged.rs  record_tag_content.rs  union_of_records.rs
avro_derive/tests/: derive.proptest-regressions  derive.rs  enum.rs  expand.rs  serde.rs  ui.rs
avro_derive/tests/expanded/: avro_3687_basic_enum_with_default.expanded.rs  avro_3687_basic_enum_with_default.rs  avro_3709_record_field_attributes.expanded.rs  avro_3709_record_field_attributes.rs  avro_rs_207_rename_all_attribute.expanded.rs  avro_rs_207_rename_all_attribute.rs  avro_rs_207_rename_attr_over_rename_all_attribute.expanded.rs  avro_rs_207_rename_attr_over_rename_all_attribute.rs  avro_rs_501_basic.expanded.rs  avro_rs_501_basic.rs  avro_rs_501_namespace.expanded.rs  avro_rs_501_namespace.rs  avro_rs_501_reference.expanded.rs  avro_rs_501_reference.rs  avro_rs_501_struct_with_optional.expanded.rs  avro_rs_501_struct_with_optional.rs  avro_rs_569_non_basic_enum.expanded.rs  avro_rs_569_non_basic_enum.rs  avro_rs_569_rename_all_fields.expanded.rs  avro_rs_569_rename_all_fields.rs  avro_rs_569_tag_content_enum.expanded.rs  avro_rs_569_tag_content_enum.rs  avro_rs_569_tag_enum.expanded.rs  avro_rs_569_tag_struct.expanded.rs  avro_rs_569_tuple_struct.expanded.rs  avro_rs_569_unit_struct.expanded.rs  avro_rs_569_untagged_enum.expanded.rs  avro_rs_xxx_bare_union.expanded.rs  avro_rs_xxx_bare_union.rs  avro_rs_xxx_internally_tagged.expanded.rs  avro_rs_xxx_internally_tagged.rs  avro_rs_xxx_serde_from_into.expanded.rs  avro_rs_xxx_serde_from_into.rs  avro_rs_xxx_serde_transparent.expanded.rs  avro_rs_xxx_serde_transparent.rs  avro_rs_xxx_tag_content.expanded.rs  avro_rs_xxx_tag_content.rs  avro_rs_xxx_union_of_records.expanded.rs  avro_rs_xxx_union_of_records.rs  mod.rs
avro_derive/tests/ui/: avro_3687_basic_enum_with_default_twice.rs  avro_3687_basic_enum_with_default_twice.stderr  avro_rs_226_skip_serializing.rs  avro_rs_226_skip_serializing.stderr  avro_rs_226_skip_serializing_if.rs  avro_rs_226_skip_serializing_if.stderr  avro_rs_373_alias.rs  avro_rs_373_alias.stderr  avro_rs_373_field_rename.rs  avro_rs_373_field_rename.stderr  avro_rs_373_flatten.rs  avro_rs_373_flatten.stderr  avro_rs_373_name.rs  avro_rs_373_name.stderr  avro_rs_373_remote.rs  avro_rs_373_remote.stderr  avro_rs_373_rename_all.rs  avro_rs_373_rename_all.stderr  avro_rs_373_rename_all_fields.rs  avro_rs_373_rename_all_fields.stderr  avro_rs_373_skip.rs  avro_rs_373_skip.stderr  avro_rs_373_skip_de_serializing.rs  avro_rs_373_skip_de_serializing.stderr  avro_rs_373_tag struct.rs  avro_rs_373_tag struct.stderr  avro_rs_373_tag_content_enum.rs  avro_rs_373_tag_content_enum.stderr  avro_rs_373_tag_enum.rs  avro_rs_373_tag_enum.stderr  avro_rs_373_tag_struct.rs  avro_rs_373_tag_struct.stderr  avro_rs_373_transparent.rs  avro_rs_373_transparent.stderr  avro_rs_373_untagged_enum.rs  avro_rs_373_untagged_enum.stderr  avro_rs_373_variant_rename.rs  avro_rs_373_variant_rename.stderr  avro_rs_396_with_expr_lambda.stderr  avro_rs_396_with_expr_string.stderr  (+51 more)
(+21 files in other folders)
