# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro"
description = "A library for working with Apache Avro in Rust"
readme = "README.md"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[features]
default = ["tokio"]
bzip = ["dep:bzip2"]
derive = ["dep:apache-avro-derive"]
snappy = ["dep:crc32fast", "dep:snap"]
xz = ["dep:xz2"]
zstandard = ["dep:zstd"]
sync = []
tokio = ["dep:tokio", "dep:futures"]

[lib]
# disable benchmarks to allow passing criterion arguments to `cargo bench`
bench = false
path = "src/lib.rs"

[[bench]]
harness = false
name = "serde"

[[bench]]
harness = false
name = "serde_json"

[[bench]]
harness = false
name = "single"

[dependencies]
apache-avro-derive = { default-features = false, version = "0.20.0", path = "../avro_derive", optional = true }
bigdecimal = { default-features = false, version = "0.4.8", features = ["std", "serde"] }
bon = { default-features = false, version = "3.7.0" }
bzip2 = { version = "0.6.0", optional = true }
crc32fast = { default-features = false, version = "1.5.0", optional = true }
digest = { default-features = false, version = "0.10.7", features = ["core-api"] }
miniz_oxide = { default-features = false, version = "0.8.9", features = ["with-alloc"] }
log = { workspace = true }
num-bigint = { default-features = false, version = "0.4.6", features = ["std", "serde"] }
regex-lite = { default-features = false, version = "0.1.6", features = ["std", "string"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
snap = { default-features = false, version = "1.1.0", optional = true }
strum = { default-features = false, version = "0.27.2" }
strum_macros = { default-features = false, version = "0.27.2" }
thiserror = { default-features = false, version = "2.0.14" }
tokio = { version = "1.47.0", default-features = false, features = [ "fs", "io-util", "macros", "rt-multi-thread" ], optional = true }
uuid = { default-features = false, version = "1.18.0", features = ["serde", "std"] }
xz2 = { default-features = false, version = "0.1.7", optional = true }
zstd = { default-features = false, version = "0.13.3", optional = true }
synca = { git = "https://github.com/martin-g/rs_synca/", branch = "add-support-for-use-path-replacing" }
#synca = { path = "/home/martin/git/rust/rs_synca/synca" }
futures = { version =  "0.3.31", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-rand = { default-features = false, version = "0.2.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { default-features = false, version = "0.9.2", features = ["default"] }

[dev-dependencies]
anyhow = { default-features = false, version = "1.0.99", features = ["std"] }
apache-avro-test-helper = { default-features = false, version = "0.20.0", path = "../avro_test_helper" }
criterion = { default-features = false, version = "0.7.0" }
hex-literal = { default-features = false, version = "1.0.0" }
md-5 = { default-features = false, version = "0.10.6" }
pretty_assertions = { workspace = true }
serial_test = "3.2.0"
sha2 = { default-features = false, version = "0.10.9" }
paste = { default-features = false, version = "1.0.15" }
rstest = { default-features = false, version = "0.26.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
required-features = ["sync"]

[[example]]
name = "async_benchmark"
path = "examples/async_benchmark.rs"
required-features = ["tokio"]

[[example]]
name = "generate_interop_data"
path = "examples/generate_interop_data.rs"
required-features = ["sync"]

[[example]]
name = "specific_single_object"
path = "examples/specific_single_object.rs"
required-features = ["sync", "derive"]

[[example]]
name = "test_interop_data"
path = "examples/test_interop_data.rs"
required-features = ["sync"]

[[example]]
name = "test_interop_single_object_encoding"
path = "examples/test_interop_single_object_encoding.rs"
required-features = ["sync"]

[[example]]
name = "to_value"
path = "examples/to_value.rs"
required-features = ["sync"]

[[test]]
name = "append_to_existing"
path = "tests/append_to_existing.rs"
required-features = ["sync", "derive"]

[[test]]
name = "avro-3786"
path = "tests/avro-3786.rs"
required-features = ["sync"]

[[test]]
name = "avro-3787"
path = "tests/avro-3787.rs"
required-features = ["sync"]

[[test]]
name = "avro-rs-219"
path = "tests/avro-rs-219.rs"
required-features = ["sync"]

[[test]]
name = "avro-rs-226"
path = "tests/avro-rs-226.rs"
required-features = ["sync", "derive"]

[[test]]
name = "big_decimal"
path = "tests/big_decimal.rs"
required-features = ["sync"]

[[test]]
name = "codecs"
path = "tests/codecs.rs"
required-features = ["sync"]

[[test]]
name = "io"
path = "tests/io.rs"
required-features = ["sync"]

[[test]]
name = "schema"
path = "tests/schema.rs"
required-features = ["sync"]

[[test]]
name = "async_schema"
path = "tests/async_schema.rs"
required-features = ["tokio"]

[[test]]
name = "shared"
path = "tests/shared.rs"
required-features = ["sync"]

[[test]]
name = "to_from_avro_datum_schemata"
path = "tests/to_from_avro_datum_schemata.rs"
required-features = ["sync"]

[[test]]
name = "union_schema"
path = "tests/union_schema.rs"
required-features = ["sync"]

[[test]]
name = "uuids"
path = "tests/uuids.rs"
required-features = ["sync"]

[[test]]
name = "validators"
path = "tests/validators.rs"
required-features = ["sync"]
