# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro-derive"
version.workspace = true
description = "A library for deriving Avro schemata from Rust structs and enums"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["avro", "data", "serialization", "derive"]
categories.workspace = true
documentation = "https://docs.rs/apache-avro-derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = { default-features = false, version = "0.21.3" }
proc-macro2 = { default-features = false, version = "1.0.106" }
quote = { default-features = false, version = "1.0.44" }
serde_json = { workspace = true }
syn = { default-features = false, version = "2.0.115", features = ["full", "fold"] }
uuid = { workspace = true }

[dev-dependencies]
apache-avro = { default-features = false, path = "../avro", features = ["derive"] }
pretty_assertions = { workspace = true }
proptest = { default-features = false, version = "1.10.0", features = ["std"] }
rustversion = "1.0.22"
serde = { workspace = true }
trybuild = "1.0.115"

[build-dependencies]
rustversion = "1.0.22"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
